--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,14 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
   {%- include head.html -%}
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D2XL34QBEQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'G-D2XL34QBEQ');
+  </script>
   <body>
 
     {%- include header.html -%}
