--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,21 @@ layout: default
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
+    <!-- カスタムスペース(広告、SNSシェアなど) -->
+    <hr>
+    <h3>SNS Share</h3>
+    <ul class="share-post list-inline pull-right">
+      <li>
+        <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url | relative_url }}" rel="nofollow" target="_blank" title="Share on Twitter" class='btn btn-default btn-xs'>
+          <i class="fa fa-twitter"><span>Twitter</span></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url | relative_url }}" rel="nofollow" target="_blank" title="Share on Facebook"" class='btn btn-default btn-xs'>
+          <i class='fa fa-facebook'><span>Facebook</span></i>
+        </a>
+      </li>
+    </ul>
   </div>
 
   {%- if site.disqus.shortname -%}
