--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
     <h3>SNS Share</h3>
     <ul class="share-post list-inline pull-right">
       <li>
-        <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url | relative_url }}" rel="nofollow" target="_blank" title="Share on Twitter" class='btn btn-default btn-xs'>
+        <a href="https://twitter.com/intent/tweet?text={{ page.title }} -- {{ site.title }}&url={{ site.url }}{{ page.url | relative_url }}" rel="nofollow" target="_blank" title="Share on Twitter" class='btn btn-default btn-xs'>
           <i class="fa fa-twitter"><span>Twitter</span></i>
         </a>
       </li>
