--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@ layout: default
     <!-- カスタムスペース(広告、SNSシェアなど) -->
     <hr>
     <h3>SNS Share</h3>
+    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <ul class="share-post list-inline pull-right">
       <li>
         <a href="https://twitter.com/intent/tweet?text={{ page.title }} -- {{ site.title }}&url={{ site.url }}{{ page.url | relative_url }}" rel="nofollow" target="_blank" title="Share on Twitter" class='btn btn-default btn-xs'>
