--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <!-- Twitter share -->
+    <!-- Twitter share https://publish.twitter.com/?buttonType=TweetButton&widget=Button -->
     <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <!-- Facebook share step2 https://developers.facebook.com/docs/plugins/like-button -->
     <div class="fb-like" data-href="{{ site.url }}{{ page.url | relative_url }}" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
@@ -29,7 +29,7 @@ layout: default
     <hr>
     <!-- Twitter share -->
     <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <!-- Facebook share step2 https://developers.facebook.com/docs/plugins/like-button -->
+    <!-- Facebook share step2 -->
     <div class="fb-like" data-href="{{ site.url }}{{ page.url | relative_url }}" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
     <!-- カスタムスペースここまで -->
   </div>
