--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,14 @@ layout: default
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}</p>
+      <nav id="tags">
+        <h2>tags:</h2>
+        <ul>
+          {% for tag in page.tags %}
+          <li>{{ tag }}</li>
+          {% endfor %}
+        </ul>
+      </nav>   
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
