--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -3,7 +3,7 @@
 layout: default
 ---
 <h2>{{ page.tag }}記事一覧</h2>
-<ul>
+<!-- <ul>
 {% for post in page.posts %}
   <li><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})</li>
 {% endfor %}
@@ -11,4 +11,12 @@ layout: default
 <h2>タグ一覧</h2>
 <div id="tag-cloud">
   {{ site | tag_cloud }}
-</div>
+</div> -->
+
+<ul>
+  {% for post in site.tags[page.tag] %}
+  <li>
+    <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
+  </li>
+  {% endfor %}
+</ul>
