--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -16,7 +16,7 @@ layout: default
 <ul>
   {% for post in site.tags[page.tag] %}
   <li>
-    <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
+    {{ post.date }}: <a href="{{ post.url }}">{{ post.title }}</a>
   </li>
   {% endfor %}
 </ul>
