--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -7,7 +7,7 @@ layout: default
 <ul>
   {% for post in site.tags[page.tag] %}
   <li>
-    {{ post.date }}: <a href="{{ post.url }}">{{ post.title }}</a>
+    {{ post.date }}: <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a>
   </li>
   {% endfor %}
 </ul>
