--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
         <span>tags:</span>
         <ul li style="display:inline;">
           {% for tag in page.tags %}
-          <li style="display:inline;"><a href="{{site.baseurl}}/tag/{{ tag }}.html">{{ tag }}</a></li>
+          <li style="display:inline;"><a href="{{site.baseurl}}/tags/{{ tag }}">{{ tag }}</a></li>
           {% endfor %}
         </ul>
       </nav>   
