--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,47 +5,65 @@ layout: default
 
   <!-- Facebook share step1 https://developers.facebook.com/docs/plugins/like-button -->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v9.0" nonce="ImLtfidG"></script>
-  
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v9.0"
+    nonce="ImLtfidG"></script>
+
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
+        Posted date：{{ page.date }}
+      </time><br />
+      {% if page.lastmod %}
+      <time class="dt-published" datetime="{{ page.lastmod | date_to_xmlschema }}" itemprop="datePublished">
+        Updated date：{{ page.lastmod }}
       </time>
+      {%- endif -%}
       {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
-      <nav id="tags">
-        <span>tags:</span>
-        <ul li style="display:inline;">
-          {% for tag in page.tags %}
-          <li style="display:inline;"><a href="{{site.baseurl}}/tags/{{ tag }}">{{ tag }}</a></li>
-          {% endfor %}
-        </ul>
-      </nav>   
+      • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card"
+          itemprop="name">{{ page.author }}</span></span>
+      {%- endif -%}
+    </p>
+    <nav id="tags">
+      <span>tags:</span>
+      <ul li style="display:inline;">
+        {% for tag in page.tags %}
+        <li style="display:inline;"><a href="{{site.baseurl}}/tags/{{ tag }}">{{ tag }}</a></li>
+        {% endfor %}
+      </ul>
+    </nav>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
     <!-- はてなブックマークボタン https://b.hatena.ne.jp/guide/bbutton -->
-    <a href="https://b.hatena.ne.jp/entry/{{ site.url }}{{ page.url | relative_url }}" class="hatena-bookmark-button" data-hatena-bookmark-layout="vertical-normal" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/v4/public/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+    <a href="https://b.hatena.ne.jp/entry/{{ site.url }}{{ page.url | relative_url }}" class="hatena-bookmark-button"
+      data-hatena-bookmark-layout="vertical-normal" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img
+        src="https://b.st-hatena.com/images/v4/public/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加"
+        width="20" height="20" style="border: none;" /></a>
+    <script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8"
+      async="async"></script>
     <!-- Twitter share https://publish.twitter.com/?buttonType=TweetButton&widget=Button -->
-    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"
+      data-show-count="false">Tweet</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <!-- Facebook share step2 https://developers.facebook.com/docs/plugins/like-button -->
-    <div class="fb-like" data-href="{{ site.url }}{{ page.url | relative_url }}" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
+    <div class="fb-like" data-href="{{ site.url }}{{ page.url | relative_url }}" data-width="" data-layout="standard"
+      data-action="like" data-size="small" data-share="true"></div>
     {{ content }}
     <!-- カスタムスペース(広告、SNSシェアなど) -->
     <hr>
     <!-- Twitter share -->
-    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"
+      data-show-count="false">Tweet</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <!-- Facebook share step2 -->
-    <div class="fb-like" data-href="{{ site.url }}{{ page.url | relative_url }}" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
+    <div class="fb-like" data-href="{{ site.url }}{{ page.url | relative_url }}" data-width="" data-layout="standard"
+      data-action="like" data-size="small" data-share="true"></div>
     <!-- カスタムスペースここまで -->
   </div>
 
   {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
+  {%- include disqus_comments.html -%}
   {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
