以下の対応実施 - プライバシーポリシー更新 - Jekyll4.xへの更新 - GithubActionsへの移行

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,6 +52,7 @@ layout: default
     <!-- Bluesky share https://github.com/spuithori/bsky-share-button -->
     <bsky-share-button url="{{ site.url }}{{ page.url | relative_url }}"></bsky-share-button>
     <script src="https://unpkg.com/bsky-share-button@latest/dist/bsky-share-button.umd.js"></script>
+    {% include cookie-consent.html %}
     {{ content }}
     <!-- カスタムスペース(広告、SNSシェアなど) -->
     <hr>
