--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,7 @@ layout: default
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
 
+  {% include cookie-consent.html %}
   <div class="post-content">
     {{ content }}
   </div>
